--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,16 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+
+
+
+
+
+# Node modules
+node_modules/
+
+# Next.js build output
+.next/
+node_modules/
+.next/
