--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -4,3 +4,6 @@ pydantic>=2.5.0
 pydantic[email]>=2.5.0
 openai>=1.3.0
 python-dotenv>=1.0.0
+sqlalchemy>=2.0.0
+psycopg2-binary>=2.9.0
+alembic>=1.12.0
